@@ -80,15 +80,15 @@ Options/Select ROMs/Spectrum _128K..., Item,, menu_options_selectroms_select, 3
 Options/Select ROMs/Spectrum +_2..., Item,, menu_options_selectroms_select, 4
 Options/Select ROMs/Spectrum +2_A..., Item,, menu_options_selectroms_select, 5
 Options/Select ROMs/Spectrum +_3..., Item,, menu_options_selectroms_select, 6
-Options/Select ROMs/Spectrum +3_e..., Item,, menu_options_selectroms_select, 11
-Options/Select ROMs/Timex _TC2048..., Item,, menu_options_selectroms_select, 7
-Options/Select ROMs/Timex TC206_8..., Item,, menu_options_selectroms_select, 8
-Options/Select ROMs/Timex TS2_068..., Item,, menu_options_selectroms_select, 14
-Options/Select ROMs/_Pentagon 128K..., Item,, menu_options_selectroms_select, 9
-Options/Select ROMs/S_corpion ZS 256..., Item,, menu_options_selectroms_select, 10
-Options/Select ROMs/Spectrum _SE..., Item,, menu_options_selectroms_select, 12,
-Options/Select ROMs/Interface _I..., Item,, menu_options_selectroms_select, 13
-Options/Select ROMs/Plus _D..., Item,, menu_options_selectroms_select, 15
+Options/Select ROMs/Spectrum +3_e..., Item,, menu_options_selectroms_select, 7
+Options/Select ROMs/Timex _TC2048..., Item,, menu_options_selectroms_select, 8
+Options/Select ROMs/Timex TC206_8..., Item,, menu_options_selectroms_select, 9
+Options/Select ROMs/Timex TS2_068..., Item,, menu_options_selectroms_select, 10
+Options/Select ROMs/_Pentagon 128K..., Item,, menu_options_selectroms_select, 11
+Options/Select ROMs/S_corpion ZS 256..., Item,, menu_options_selectroms_select, 12
+Options/Select ROMs/Spectrum _SE..., Item,, menu_options_selectroms_select, 13
+Options/Select ROMs/Interface _I..., Item,, menu_options_selectroms_select, 14
+Options/Select ROMs/+_D..., Item,, menu_options_selectroms_select, 15
 
 Options/_Filter..., Item
 
