@@ -494,26 +494,26 @@ settings_get_rom_setting( settings_info *settings, size_t which )
   case 11: return &( settings->rom_plus3_1  );
   case 12: return &( settings->rom_plus3_2  );
   case 13: return &( settings->rom_plus3_3  );
-  case 14: return &( settings->rom_tc2048   );
-  case 15: return &( settings->rom_tc2068_0 );
-  case 16: return &( settings->rom_tc2068_1 );
-  case 17: return &( settings->rom_pentagon_0 );
-  case 18: return &( settings->rom_pentagon_1 );
-  case 19: return &( settings->rom_pentagon_2 );
-  case 20: return &( settings->rom_pentagon_3 );
-  case 21: return &( settings->rom_scorpion_0 );
-  case 22: return &( settings->rom_scorpion_1 );
-  case 23: return &( settings->rom_scorpion_2 );
-  case 24: return &( settings->rom_scorpion_3 );
-  case 25: return &( settings->rom_plus3e_0 );
-  case 26: return &( settings->rom_plus3e_1 );
-  case 27: return &( settings->rom_plus3e_2 );
-  case 28: return &( settings->rom_plus3e_3 );
-  case 29: return &( settings->rom_spec_se_0 );
-  case 30: return &( settings->rom_spec_se_1 );
-  case 31: return &( settings->rom_interface_i );
-  case 32: return &( settings->rom_ts2068_0 );
-  case 33: return &( settings->rom_ts2068_1 );
+  case 14: return &( settings->rom_plus3e_0 );
+  case 15: return &( settings->rom_plus3e_1 );
+  case 16: return &( settings->rom_plus3e_2 );
+  case 17: return &( settings->rom_plus3e_3 );
+  case 18: return &( settings->rom_tc2048   );
+  case 19: return &( settings->rom_tc2068_0 );
+  case 20: return &( settings->rom_tc2068_1 );
+  case 21: return &( settings->rom_ts2068_0 );
+  case 22: return &( settings->rom_ts2068_1 );
+  case 23: return &( settings->rom_pentagon_0 );
+  case 24: return &( settings->rom_pentagon_1 );
+  case 25: return &( settings->rom_pentagon_2 );
+  case 26: return &( settings->rom_pentagon_3 );
+  case 27: return &( settings->rom_scorpion_0 );
+  case 28: return &( settings->rom_scorpion_1 );
+  case 29: return &( settings->rom_scorpion_2 );
+  case 30: return &( settings->rom_scorpion_3 );
+  case 31: return &( settings->rom_spec_se_0 );
+  case 32: return &( settings->rom_spec_se_1 );
+  case 33: return &( settings->rom_interface_i );
   case 34: return &( settings->rom_plusd );
   default: return NULL;
   }
